[package]
name = "pmmp_installer"
version = "0.1.0"
authors = ["Jviguy <jviguytwo2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
colored = "2"
clap = "2.33.3"
indicatif = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.13"
archiver-rs = "0.5.1"